--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
+
 .header {
     border-bottom: 2px solid #00c9b7;
     margin-top: 20px !important;
     margin-bottom: 20px !important;
     font-family: 'Dancing Script', cursive;
     font-size: 20px !important;
+
 }
 .header-container {
     margin-right: 0px !important;
@@ -35,7 +36,7 @@ img {
     border-style: none;
 }
 body {
-    background : #eee ;
+    background :  ;
 }
 .card {
     border : none !important;
